# dmux

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: index.html
src/dmux/: __init__.py  __main__.py  cli.py  exceptions.py  paths.py  plugin_doc_defaults.py  schemas.py  ssl_fetch.py
src/dmux/api/: __init__.py  app.py
src/dmux/data/: awesome_tmux_plugins.json  plugin_defaults.json
src/dmux/modules/: __init__.py  autosave.py  clipboard.py
src/dmux/navigation/: __init__.py  fuzzy.py
src/dmux/persistence/: __init__.py  serialize.py  state_manager.py
src/dmux/services/: __init__.py  github_plugin_help.py  plugin_manager.py  resurrect.py  tmux_service.py
src/dmux/web/static/: app.js  plugins-fragment-editor.js  status-bar-wizard.js  styles.css
src/dmux/web/templates/: index.html
src/dmux/workspaces/: __init__.py  project.py
tests/: test_smoke.py
