[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmux"
version = "0.1.0"
description = "Unified control layer over tmux — sessions, persistence, CLI, and web UI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "dmux contributors" }]
keywords = ["tmux", "terminal", "multiplexer", "libtmux"]
dependencies = [
    "certifi>=2024.0.0",
    "libtmux>=0.25,<1",
    "typer>=0.12,<1",
    "flask>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
dmux = "dmux.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dmux = ["py.typed", "web/**/*", "vendor/tpm/**/*", "data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["dmux"]
