[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmux"
version = "0.2.0"
description = "Unified control layer over tmux — sessions, persistence, plugins, CLI, and a web UI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Davidix", email = "d.bereihi@gmail.com" }]
keywords = [
    "tmux",
    "terminal",
    "multiplexer",
    "libtmux",
    "tpm",
    "session-manager",
    "developer-tools",
]
dependencies = [
    "certifi>=2024.0.0",
    "libtmux>=0.25,<1",
    "typer>=0.12,<1",
    "flask>=3.0,<4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage      = "https://davidix.github.io/dmux"
Repository    = "https://github.com/davidix/dmux"
Issues        = "https://github.com/davidix/dmux/issues"
Changelog     = "https://github.com/davidix/dmux/releases"
Documentation = "https://davidix.github.io/dmux"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
dmux = "dmux.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dmux = ["py.typed", "web/**/*", "vendor/tpm/**/*", "data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["dmux"]
